--- a/app/src/main/res/layout/activity_character_details.xml
+++ b/app/src/main/res/layout/activity_character_details.xml
@@ -14,6 +14,17 @@
         android:layout_gravity="center"
         tools:ignore="MissingConstraints" />
 
+
+    <Button
+        android:id="@+id/addToFavoriteButton"
+        android:layout_width="123dp"
+        android:layout_height="51dp"
+        android:layout_marginEnd="136dp"
+        android:layout_marginBottom="220dp"
+        android:text="Agregar a favoritos"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
     <Button
         android:id="@+id/shareButton"
         android:layout_width="wrap_content"
