--- a/app/src/main/res/layout/activity_favorite_characters.xml
+++ b/app/src/main/res/layout/activity_favorite_characters.xml
@@ -7,4 +7,17 @@
     android:layout_height="match_parent"
     tools:context=".FavoriteCharactersActivity">
 
-  </androidx.constraintlayout.widget.ConstraintLayout>
+  <androidx.recyclerview.widget.RecyclerView
+      android:id="@+id/recyclerViewFavoriteCharacters"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="1.0"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="0.0"
+      tools:listitem="@layout/character_item" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
