--- a/app/src/main/res/layout/activity_character_details.xml
+++ b/app/src/main/res/layout/activity_character_details.xml
@@ -19,11 +19,22 @@
         android:id="@+id/addToFavoriteButton"
         android:layout_width="123dp"
         android:layout_height="51dp"
-        android:layout_marginEnd="136dp"
+        android:layout_marginEnd="272dp"
         android:layout_marginBottom="220dp"
         android:text="Agregar a favoritos"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <Button
+        android:id="@+id/removeFromFavoriteButton"
+        android:layout_width="123dp"
+        android:layout_height="51dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="220dp"
+        android:text="Eliminar de favoritos"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
 
     <Button
         android:id="@+id/shareButton"
