--- a/app/src/main/res/layout/activity_character_details.xml
+++ b/app/src/main/res/layout/activity_character_details.xml
@@ -16,27 +16,6 @@
 
 
     <Button
-        android:id="@+id/addToFavoriteButton"
-        android:layout_width="123dp"
-        android:layout_height="51dp"
-        android:layout_marginEnd="272dp"
-        android:layout_marginBottom="220dp"
-        android:text="Agregar a favoritos"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <Button
-        android:id="@+id/removeFromFavoriteButton"
-        android:layout_width="123dp"
-        android:layout_height="51dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="220dp"
-        android:text="Eliminar de favoritos"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-
-    <Button
         android:id="@+id/shareButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -44,6 +23,18 @@
         android:layout_marginEnd="148dp"
         android:layout_marginBottom="32dp"
         android:text="Compartir"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:ignore="MissingConstraints" />
+    <!-- CheckBox para agregar/quitar de favoritos -->
+    <CheckBox
+        android:id="@+id/favoriteCheckBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginEnd="160dp"
+        android:layout_marginBottom="136dp"
+        android:text="Favoritos"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         tools:ignore="MissingConstraints" />
