--- a/app/src/main/res/layout/item_favorite_character.xml
+++ b/app/src/main/res/layout/item_favorite_character.xml
@@ -9,38 +9,10 @@
         android:id="@+id/characterImageViewF"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:srcCompat="@tools:sample/avatars"
-        tools:ignore="MissingConstraints" />
-
-    <TextView
-        android:id="@+id/nombreF"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text=""
-        android:textSize="16sp"
-        android:layout_marginTop="8dp"
-        tools:ignore="MissingConstraints" />
-
-    <TextView
-        android:id="@+id/estadoF"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text=""
-        android:textSize="16sp"
-        android:layout_marginTop="8dp"
-        tools:ignore="MissingConstraints" />
-    <TextView
-        android:id="@+id/ubicacionF"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text=""
-        android:textSize="16sp"
-        android:layout_marginTop="8dp"
-        tools:ignore="MissingConstraints" />
-
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="16dp"
+        tools:srcCompat="@tools:sample/avatars" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
