--- a/app/src/main/res/layout/activity_favorite_characters.xml
+++ b/app/src/main/res/layout/activity_favorite_characters.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FavoriteCharactersActivity">
+    tools:context=".UI.FavoriteCharactersActivity">
 
   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/recyclerViewFavoriteCharacters"
